Single document chat v1

--- a/notebook/experiments.ipynb
+++ b/notebook/experiments.ipynb
@@ -2332,11 +2332,204 @@
    "source": [
     "### TASK: Take 10 pdfs, keep it in safe directory and create RAG on top of it."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "195374a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29742b53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daec2f08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "90059628",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n",
+      "<langchain_community.docstore.in_memory.InMemoryDocstore object at 0x10690a7d0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import faiss\n",
+    "import pickle\n",
+    "\n",
+    "# Load the FAISS index\n",
+    "index = faiss.read_index(\"/Users/monikabadadhe/Documents/AI_Projects/document_portal_monika/faiss_index/index.faiss\")\n",
+    "\n",
+    "# Load the metadata\n",
+    "with open(\"/Users/monikabadadhe/Documents/AI_Projects/document_portal_monika/faiss_index/index.pkl\", \"rb\") as f:\n",
+    "    metadata = pickle.load(f)\n",
+    "\n",
+    "# Example usage\n",
+    "print(index.ntotal)  # number of vectors\n",
+    "print(metadata[0])   # assuming metadata is a list or dict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2bae1707",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded object is not an InMemoryDocstore.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the FAISS index and metadata\n",
+    "import faiss\n",
+    "import pickle\n",
+    "\n",
+    "# Load FAISS index\n",
+    "index = faiss.read_index(\"/Users/monikabadadhe/Documents/AI_Projects/document_portal_monika/faiss_index/index.faiss\")\n",
+    "\n",
+    "# Load metadata (docstore, usually)\n",
+    "with open(\"/Users/monikabadadhe/Documents/AI_Projects/document_portal_monika/faiss_index/index.pkl\", \"rb\") as f:\n",
+    "    obj = pickle.load(f)\n",
+    "\n",
+    "# Try inspecting the docstore\n",
+    "if hasattr(obj, 'search'):\n",
+    "    # It's likely InMemoryDocstore\n",
+    "    store = obj.__dict__.get('__dict__', obj.__dict__)  # get raw dict\n",
+    "    documents = store.get('docs') or getattr(obj, 'docs', None)\n",
+    "\n",
+    "    if documents:\n",
+    "        print(\"Total documents:\", len(documents))\n",
+    "        for key, doc in list(documents.items())[:5]:  # show first 5\n",
+    "            print(f\"\\nDoc ID: {key}\\nContent: {doc.page_content}\")\n",
+    "    else:\n",
+    "        print(\"No documents found inside InMemoryDocstore.\")\n",
+    "else:\n",
+    "    print(\"Loaded object is not an InMemoryDocstore.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "80b5814d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type of loaded object: <class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"/Users/monikabadadhe/Documents/AI_Projects/document_portal_monika/faiss_index/index.pkl\", \"rb\") as f:\n",
+    "    obj = pickle.load(f)\n",
+    "\n",
+    "print(\"Type of loaded object:\", type(obj))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8dcd0987",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FAISS index type: <class 'langchain_community.docstore.in_memory.InMemoryDocstore'>\n",
+      "Docstore type: <class 'dict'>\n",
+      "Docstore has no _dict attribute. Try vars(docstore) or dir(docstore) to explore.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# Load the 2-tuple\n",
+    "with open(\"/Users/monikabadadhe/Documents/AI_Projects/document_portal_monika/faiss_index/index.pkl\", \"rb\") as f:\n",
+    "    faiss_index, docstore = pickle.load(f)\n",
+    "\n",
+    "# Inspect the docstore\n",
+    "print(\"FAISS index type:\", type(faiss_index))\n",
+    "print(\"Docstore type:\", type(docstore))\n",
+    "\n",
+    "# Try to inspect some documents\n",
+    "if hasattr(docstore, \"_dict\"):\n",
+    "    docs = docstore._dict\n",
+    "    print(f\"Total documents: {len(docs)}\")\n",
+    "\n",
+    "    # Preview first 5\n",
+    "    for doc_id, doc in list(docs.items())[:5]:\n",
+    "        print(f\"\\n📄 Doc ID: {doc_id}\")\n",
+    "        print(\"Content:\", doc.page_content)\n",
+    "        print(\"Metadata:\", doc.metadata)\n",
+    "else:\n",
+    "    print(\"Docstore has no _dict attribute. Try vars(docstore) or dir(docstore) to explore.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ee7edf42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FAISS index type: <class 'dict'>\n",
+      "Docstore type: <class 'langchain_community.docstore.in_memory.InMemoryDocstore'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# Load in correct order\n",
+    "with open(\"/Users/monikabadadhe/Documents/AI_Projects/document_portal_monika/faiss_index/index.pkl\", \"rb\") as f:\n",
+    "    docstore, faiss_index = pickle.load(f)\n",
+    "\n",
+    "print(\"FAISS index type:\", type(faiss_index))\n",
+    "print(\"Docstore type:\", type(docstore))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4dbcc43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
